--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Welcome to <h3>Microcare</h3>.The world of developers</p>
+    <p>Welcome to <h3>Microcare</h3>.The Tech hub of developers</p>
 </div>
